# info-gathering

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: run.yml  run.yml.sample  test.yml
config/: sources.yaml
docs/plans/: 2026-06-11-info-gathering-bot.md
src/infobot/: config.py  main.py  models.py  post.py  store.py  summarize.py
src/infobot/fetchers/: __init__.py  hackernews.py  reddit.py  rss.py
tests/: test_hackernews.py  test_post.py  test_reddit.py  test_rss.py  test_store.py  test_summarize.py
tests/fixtures/: arxiv_sample.xml  blog_sample.xml  reddit_sample.xml
