[project]
name = "infobot"
version = "0.1.0"
description = "Scheduled info-gathering bot posting categorized digests to Discord/Slack"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "anthropic>=0.50",
    "pydantic>=2.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infobot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
